--- a/gather_students/src/main/resources/templates/home.html
+++ b/gather_students/src/main/resources/templates/home.html
@@ -3,28 +3,32 @@
 <head>
     <title>Trang chủ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>TRA CỨU THÔNG TIN TUYỂN SINH</h1>
-        <div class="img">
-            <img th:src="@{/img/kageyama.jpg}">
-        </div>
+<div class="container">
+    <h1>TRA CỨU THÔNG TIN TUYỂN SINH</h1>
+    <div class="img">
+        <img th:src="@{/img/kageyama.jpg}">
+    </div>
 
-        <form th:action="@{/import}" method="post"
-              enctype="multipart/form-data">
+    <form th:action="@{/import}" method="post"
+          enctype="multipart/form-data">
+        <div class="form-group">
             <div class="form-group">
-                <div class="form-group">
-                    <input type="file" name="file" class="form-control-file">
-                </div>
-                <button type="submit" class="btn btn-primary">Upload File</button>
+                <input type="file" name="file" class="form-control-file">
             </div>
-        </form>
-        <div>
-
+            <button type="submit" class="btn">Upload File</button>
         </div>
+    </form>
+    <div>
 
     </div>
+
+</div>
+
+<footer style="background: PapayaWhip">
+    Trang tra cứu thông tin tuyển sinh
+</footer>
 </body>
 </html>
