--- a/gather_students/src/main/resources/templates/search.html
+++ b/gather_students/src/main/resources/templates/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Thông tin chi tiết</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
@@ -85,6 +85,8 @@
     </table>
 
 </div>
-
+<footer style="background: PapayaWhip">
+    Trang tra cứu thông tin tuyển sinh
+</footer>
 </body>
 </html>
