--- a/gather_students/src/main/resources/templates/search.html
+++ b/gather_students/src/main/resources/templates/search.html
@@ -13,13 +13,13 @@
 
     <form th:action="@{/search}" method="post" class="form-example">
         <div class="row">
-            <label for="name">Họ tên</label>
-            <input type="text" id="name" name="name"></br>
+            <label for="studentName">Họ tên</label>
+            <input type="text" id="studentName" name="studentName"></br>
 
         </div>
         <div class="row">
-            <label for="code">Mã học sinh</label>
-            <input type="text" id="code" name="code"></br>
+            <label for="studentCode">Mã học sinh</label>
+            <input type="text" id="studentCode" name="studentCode"></br>
         </div>
         <div class="row">
             <label for="submitBtn"></label>
